@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        Deploy adoptPtr in WebCore/editing
+        https://bugs.webkit.org/show_bug.cgi?id=44501
+
+        * editing/Editor.cpp:
+        (WebCore::Editor::Editor):
+        * editing/TextIterator.cpp:
+        (WebCore::plainTextToMallocAllocatedBuffer):
+
+2010-08-24  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         Deploy adoptPtr in WebCore/history
         https://bugs.webkit.org/show_bug.cgi?id=44502
 
